--- a/index.html
+++ b/index.html
@@ -28,25 +28,54 @@
     }
     li {
       margin: 10px 0;
+      font-size: 1.2em;
     }
     a {
       text-decoration: none;
       color: #0066cc;
-      font-size: 1.2em;
     }
     a:hover {
       text-decoration: underline;
+    }
+    .levelValue {
+      font-weight: bold;
+      color: #0066cc;
+      margin-left: 8px;
+      font-size: 1em;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to the Quiz Hub!</h1>
-  <p id="overallLevel">Loading overall level...</p>
+  <p id="overallLevel"></p>
 
   <ul>
-    <li><a href="https://phennylalanine.github.io/4th-Grade-homepage/dayssingle/" target="_blank" rel="noopener noreferrer">Day Quiz - 曜日クイズ</a></li>
-    <li><a href="https://phennylalanine.github.io/4th-Grade-homepage/weather" target="_blank" rel="noopener noreferrer">Weather Quiz - 天気クイズ</a></li>
- 
+    <li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
+       Round 1 Months Quiz - 建物クイズ第1戦
+      </a>
+      <span class="levelValue" data-key="BuildingSlevel">(Level: 0)</span>
+    </li>
+    <li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
+        Round 2 Months Quiz - 建物クイズ第2戦
+      </a>
+      <span class="levelValue" data-key="BuildingSlevel">(Level: 0)</span>
+    </li>
+    <li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventS" target="_blank" rel="noopener noreferrer">
+       Round 1 Activities Quiz - 行事クイズ第1戦
+      </a>
+      <span class="levelValue" data-key="EventSlevel">(Level: 0)</span>
+    </li>
+    <li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventM" target="_blank" rel="noopener noreferrer">
+        Round 2 Activities Quiz - 行事クイズ第２戦
+      </a>
+      <span class="levelValue" data-key="EventMlevel">(Level: 0)</span>
+    </li>
+  </ul>
+
   <script src="script.js"></script>
 </body>
 </html>
