--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
   <ul>
     <li>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
-       Round 1 Months Quiz - 建物クイズ第1戦
+       Round 1 Buildings Quiz - 建物クイズ第1戦
       </a>
       <span class="levelValue" data-key="BuildingSlevel">(Level: 0)</span>
     </li>
     <li>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
-        Round 2 Months Quiz - 建物クイズ第2戦
+        Round 2 Buildings Quiz - 建物クイズ第2戦
       </a>
       <span class="levelValue" data-key="BuildingSlevel">(Level: 0)</span>
     </li>
     <li>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventS" target="_blank" rel="noopener noreferrer">
-       Round 1 Activities Quiz - 行事クイズ第1戦
+       Round 1 Events Quiz - 行事クイズ第1戦
       </a>
       <span class="levelValue" data-key="EventSlevel">(Level: 0)</span>
     </li>
     <li>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventM" target="_blank" rel="noopener noreferrer">
-        Round 2 Activities Quiz - 行事クイズ第２戦
+        Round 2 Events Quiz - 行事クイズ第２戦
       </a>
       <span class="levelValue" data-key="EventMlevel">(Level: 0)</span>
     </li>
