--- a/EventM/index.html
+++ b/EventM/index.html
@@ -46,5 +46,10 @@
   <canvas id="confettiCanvas" style="position:fixed; top:0; left:0; pointer-events:none; z-index:1000;"></canvas>
 
   <script src="script.js"></script>
+
+  <footer style="text-align: center; margin-top: 40px; font-size: 0.9em; color: #888;">
+  © 2024–2025 Created by Peter Gregory
+</footer>
+
 </body>
 </html>
