--- a/index.html
+++ b/index.html
@@ -77,5 +77,9 @@
   </ul>
 
   <script src="script.js"></script>
+  <footer style="text-align: center; margin-top: 40px; font-size: 0.9em; color: #888;">
+  © 2024–2025 Created by Peter Gregory
+</footer>
+
 </body>
 </html>
