--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
   <p id="overallLevel"></p>
 
   <ul>
+  <li>
+ <a href="https://phennylalanine.github.io/Yach-5-Quiz-Home/alphabetTyping" target="_blank" rel="noopener noreferrer">
+        Alphabet Keyboard Practice - キーボードの練習
+    <span class="levelValue" data-key="TypingLevel_Level1">(Round 1 Level: 0)</span>
+ <span class="levelValue" data-key="TypingLevel_Level2">(Round 2 Level: 0)</span>
+      </a>
+</li>
+    
     <li>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
        Round 1 Buildings Quiz - 建物クイズ第1戦
