--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
       <span class="levelValue" data-key="EventMlevel">(Level: 0)</span>
     </li>
   </ul>
+<li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/directions" target="_blank" rel="noopener noreferrer">
+      Directions Quiz - 道案内
+      </a>
+      <span class="levelValue" data-key="directionslevel">(Level: 0)</span>
+    </li>
 
   <script src="script.js"></script>
   <footer style="text-align: center; margin-top: 40px; font-size: 0.9em; color: #888;">
