--- a/EventS/index.html
+++ b/EventS/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Building Quiz</title>
+  <title>Event Quiz</title>
   <link rel="stylesheet" href="style.css"> <!-- ✅ Link to external CSS -->
 </head>
 
 <body>
 
-<h1>建物クイズ</h1>
+<h1>行事クイズ</h1>
 
 <!-- Start Screen -->
 <div id="startScreen" class="active">
@@ -59,3 +59,4 @@
 </footer>
 </body>
 </html>
+
