--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
       </a>
       <span class="levelValue" data-key="directionslevel">(Level: 0)</span>
     </li>
+     <li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/PlacesS" target="_blank" rel="noopener noreferrer">
+        Round 1 Places Quiz - 場所クイズ第1戦
+      </a>
+      <span class="levelValue" data-key="PlacesSlevel">(Level: 0)</span>
+    </li>
+<li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/placesM" target="_blank" rel="noopener noreferrer">
+      Places Quiz 2 - 場所クイズ第2戦
+      </a>
+      <span class="levelValue" data-key="PlacesMlevel">(Level: 0)</span>
+    </li>
   </ul>
 
 
