--- a/index.html
+++ b/index.html
@@ -100,9 +100,15 @@
       </a>
       <span class="levelValue" data-key="PlacesMlevel">(Level: 0)</span>
     </li>
-    <li>
+     <li>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/oppositesS" target="_blank" rel="noopener noreferrer">
-      #Opposites Quiz 2 - クイズ第2戦
+      Opposites Quiz 1 - クイズ第2戦
+      </a>
+      <span class="levelValue" data-key="PlacesMlevel">(Level: 0)</span>
+    </li>
+    <li>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/oppositesM" target="_blank" rel="noopener noreferrer">
+      Opposites Quiz 2 - クイズ第2戦
       </a>
       <span class="levelValue" data-key="PlacesMlevel">(Level: 0)</span>
     </li>
