--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
       </a>
       <span class="levelValue" data-key="oppositesMlevel">(Level: 0)</span>
     </div>
+<!-- Opposites Quiz Cards -->
+    <div class="quiz-card">
+      <div class="quiz-icon">↔️</div>
+      <h3>Opposites Quiz 1</h3>
+      <p>反対語クイズ 第1戦</p>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/schoolEventS" target="_blank" rel="noopener noreferrer">
+        Start
+      </a>
+      <span class="levelValue" data-key="schoolEventSlevel">(Level: 0)</span>
+    </div>
+        
   </div>
 
   <script src="script.js"></script>
