--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <!-- Opposites Quiz Cards -->
     <div class="quiz-card">
       <div class="quiz-icon">↔️</div>
-      <h3>Opposites Quiz 1</h3>
-      <p>反対語クイズ 第1戦</p>
+      <h3>School EventsQuiz 1</h3>
+      <p>学校行事クイズ 第1戦</p>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/schoolEventS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
