--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="BuildingSlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="BuildingSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">🏛️</div>
@@ -42,7 +42,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingsM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="BuildingsMlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="BuildingsMlevelr">(Level: 0)</span>
     </div>
 
     <!-- Events Quiz Cards -->
@@ -53,7 +53,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="EventSlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="EventSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">🎊</div>
@@ -62,7 +62,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="EventMlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="EventMlevelr">(Level: 0)</span>
     </div>
 
     <!-- Directions Quiz -->
@@ -73,7 +73,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/directions" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="directionslevel">(Level: 0)</span>
+      <span class="levelValue" data-key="directionslevelr">(Level: 0)</span>
     </div>
 
     <!-- Places Quiz Cards -->
@@ -84,7 +84,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/PlaceS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="PlacesSlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="placesSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">📌</div>
@@ -93,7 +93,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/PlacesM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="PlacesMlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="placesMlevelr">(Level: 0)</span>
     </div>
 
     <!-- Opposites Quiz Cards -->
@@ -104,7 +104,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/oppositesS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="oppositesSlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="oppositesSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">↕️</div>
@@ -113,7 +113,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/oppositesM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="oppositesMlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="oppositesMlevelr">(Level: 0)</span>
     </div>
 <!-- Opposites Quiz Cards -->
     <div class="quiz-card">
@@ -123,7 +123,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/schoolEventS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="schoolEventSlevel">(Level: 0)</span>
+      <span class="levelValue" data-key="schoolEventSlevelr">(Level: 0)</span>
     </div>
         
   </div>
