--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="BuildingSlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="buildingSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">🏛️</div>
@@ -42,7 +42,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingsM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="BuildingsMlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="buildingsMlevelr">(Level: 0)</span>
     </div>
 
     <!-- Events Quiz Cards -->
@@ -53,7 +53,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="EventSlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="eventSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">🎊</div>
@@ -62,7 +62,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/EventM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="EventMlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="eventMlevelr">(Level: 0)</span>
     </div>
 
     <!-- Directions Quiz -->
