--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/directions" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="directionslevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="directionsLevelr">(Level: 0)</span>
     </div>
 
     <!-- Places Quiz Cards -->
@@ -84,7 +84,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/PlaceS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="placesSlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="placeSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">📌</div>
@@ -104,7 +104,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/oppositesS" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="oppositesSlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="oppositeSlevelr">(Level: 0)</span>
     </div>
     <div class="quiz-card">
       <div class="quiz-icon">↕️</div>
@@ -113,11 +113,11 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/oppositesM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="oppositesMlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="oppositeMlevelr">(Level: 0)</span>
     </div>
 <!-- Opposites Quiz Cards -->
     <div class="quiz-card">
-      <div class="quiz-icon">↔️</div>
+      <div class="quiz-icon">🏫</div>
       <h3>School EventsQuiz 1</h3>
       <p>学校行事クイズ 第1戦</p>
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/schoolEventS" target="_blank" rel="noopener noreferrer">
