--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/BuildingsM" target="_blank" rel="noopener noreferrer">
         Start
       </a>
-      <span class="levelValue" data-key="buildingsMlevelr">(Level: 0)</span>
+      <span class="levelValue" data-key="buildingMlevelr">(Level: 0)</span>
     </div>
 
     <!-- Events Quiz Cards -->
