--- a/testquiz/index.html
+++ b/testquiz/index.html
@@ -13,7 +13,7 @@
 
 <!-- Monster Panel -->
 <div id="monsterPanel">
-  <img id="monsterImg" src="monster/default.png" alt="monster">
+  <img id="monsterImg" src="monster_image/default.png" alt="monster">
   <div id="monsterBubble">Hello!</div>
 </div>
 
