--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </a>
       <span class="levelValue" data-key="oppositeMlevelr">(Level: 0)</span>
     </div>
-<!-- Opposites Quiz Cards -->
+<!--School Events Quiz Cards -->
     <div class="quiz-card">
       <div class="quiz-icon">🏫</div>
       <h3>School EventsQuiz 1</h3>
@@ -120,6 +120,16 @@
         Start
       </a>
       <span class="levelValue" data-key="schoolEventSlevelr">(Level: 0)</span>
+      
+    </div>
+     <div class="quiz-card">
+      <div class="quiz-icon">🏫</div>
+      <h3>School EventsQuiz 2</h3>
+      <p>学校行事クイズ 第2戦</p>
+      <a href="https://phennylalanine.github.io/Yach-6-Quiz-Home/schoolEventM" target="_blank" rel="noopener noreferrer">
+        Start
+      </a>
+      <span class="levelValue" data-key="schoolEventMlevelr">(Level: 0)</span>
     </div>
         
   </div>
